--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -1,33 +1,33 @@
 {
   "item.better_tools.ruby": "Ruby",
   "block.better_tools.crystallite_block": "Crystallite Block",
-  "item.better_tools.curing_charm": "§6Curing Charm",
-  "item.better_tools.flint_hoe": "Flint Hoe",
   "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
+  "item.better_tools.flint_hoe": "Flint Hoe",
+  "item.better_tools.curing_charm": "§6Curing Charm",
   "advancements.crystallite_tool_upgrade_adv.title": "Crystal Tool Smith",
-  "block.better_tools.light_polished_coal_block": "Light Metallic Coal Block",
   "item.better_tools.poison_charm": "§5Poison Charm",
+  "block.better_tools.light_polished_coal_block": "Light Metallic Coal Block",
   "item_group.better_tools.crystallite_tab": "BT+A - Crystallite",
   "block.better_tools.polished_ruby_trapdoor": "Metallic Ruby Trapdoor",
   "item.minecraft.splash_potion.effect.double_jump_potion": "Splash Potion of Double Jump",
   "item.minecraft.tipped_arrow.effect.double_jump_potion_2": "Arrow of Double Jump",
-  "block.better_tools.light_polished_copper_stairs": "Polished Copper Stairs",
   "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
+  "block.better_tools.light_polished_copper_stairs": "Polished Copper Stairs",
   "item.better_tools.fire_crystal": "Flame Crystal",
   "item.copper_tools_and_armor.master_builder": "Master Builder",
   "item.better_tools.crystallite_dagger_amethyst": "Crystallite Dagger",
   "item.better_tools.battle_axe": "Battle Axe",
   "block.better_tools.jewellery_table": "Jewellery Table",
   "item.minecraft.lingering_potion.effect.potion_of_decay": "Lingering Potion of Decay",
-  "item.better_tools.crystallite_dagger_gold": "Crystallite Dagger",
   "item.better_tools.crystallite_shovel": "Crystallite Shovel",
+  "item.better_tools.crystallite_dagger_gold": "Crystallite Dagger",
   "block.better_tools.light_polished_lapis_trapdoor": "Light Metallic Lapis Lazuli Trapdoor",
   "item.better_tools.crystallite_armor_redstone_helmet": "Crystallite Helmet",
   "item.better_tools.end_titanium_axe": "Ender Titanium Axe",
   "item.better_tools.crystallite_axe_honey": "Crystallite Axe",
-  "block.better_tools.sugar_block": "Sugar Block",
-  "item.better_tools.nether_diamond_chestplate": "Nether Diamond Chestplate",
   "enchantment.better_tools.life_aura.desc": "Deal more damage the more HP you currently have, but deal less damage at low HP",
+  "item.better_tools.nether_diamond_chestplate": "Nether Diamond Chestplate",
+  "block.better_tools.sugar_block": "Sugar Block",
   "advancements.flaming_adv.title": "Hot Staff!",
   "item.better_tools.crystallite_armor_iron_chestplate": "Crystallite Chestplate",
   "item.better_tools.gold_dagger": "Golden Dagger",
@@ -37,10 +37,11 @@
   "entity.better_tools.projectile_lightning_staff_dispenser_projectile": "Dispenser using Lightning Staff",
   "item.better_tools.crystallite_armor_sapphire_helmet": "Crystallite Helmet",
   "item.better_tools.crystallite_armor_iron_boots": "Crystallite Boots",
-  "item.better_tools.fire_staff": "Fire Staff",
+  "advancements.high_crit_multiplier_adv.descr": "Deal at least double your weapon\u0027s regular damage with a critical hit",
   "item.better_tools.crystallite_sword": "Crystallite Sword",
-  "jei.better_tools.lost_souls_potion_info": "Teleports you to your last death location, if it is in the same dimension.\nIt will fail if you died in lava, or inside a solid block.\nIf you died in the void, you will be placed on a small floating platform.",
+  "item.better_tools.fire_staff": "Fire Staff",
   "item.better_tools.crystallite_axe_topaz": "Crystallite Axe",
+  "jei.better_tools.lost_souls_potion_info": "Teleports you to your last death location, if it is in the same dimension.\nIt will fail if you died in lava, or inside a solid block.\nIf you died in the void, you will be placed on a small floating platform.",
   "item.better_tools.guardian_necklace": "§3Guardian Necklace",
   "item.better_tools.crystallite_pickaxe": "Crystallite Pickaxe",
   "block.better_tools.light_polished_iron_block": "Polished Iron Block",
@@ -95,14 +96,15 @@
   "block.better_tools.sapphire_block": "Sapphire Block",
   "gui.better_tools.attributes_viewer.label_max_health": "Max Health",
   "advancements.glass_armor_adv.title": "Glass Ghost",
+  "advancements.get_guardian_spike_adv.descr": "Obtain a Guardian Spike",
   "block.better_tools.polished_gold_wall": "Polished Gold Wall",
   "advancements.progression_section.title": "BT+A - Progression",
   "item.better_tools.mogus_drip_disc": "Music Disc",
   "item.better_tools.golden_potato": "Golden Potato",
   "advancements.golden_potato_adv.title": "Gilded Gardening",
   "advancements.karma_adv.descr": "Be attacked while effected with Karma",
-  "item.better_tools.crystallite_armor_iron_helmet": "Crystallite Helmet",
   "block.better_tools.light_polished_gold_wall": "Light Polished Gold Wall",
+  "item.better_tools.crystallite_armor_iron_helmet": "Crystallite Helmet",
   "block.better_tools.light_polished_emerald_block": "Metallic Emerald Block",
   "advancements.life_aura_adv.title": "Full Potential",
   "subtitles.rick_roll": "",
@@ -127,6 +129,7 @@
   "item.minecraft.tipped_arrow.effect.criticality_potion_long": "Arrow of Criticality",
   "block.better_tools.light_polished_nether_diamond_trapdoor": "Light Metallic Nether Diamond Trapdoor",
   "item.better_tools.nether_diamond_shovel": "Nether Diamond Shovel",
+  "advancements.deal_dmg_through_armor_adv.descr": "Use a sword to deal damage which bypasses an enemy\u0027s armor protection",
   "item.better_tools.crystallite_hoe_amethyst": "Crystallite Hoe",
   "advancements.night_phantom_adv.descr": "Wear a Golden Carrot Hat and Phantom Boots at the same time",
   "death.attack.magic_weapon_damage.player": "%1$s was killed whilst trying to escape %2$s",
@@ -134,8 +137,8 @@
   "effect.better_tools.double_jump.description": "Allows for one extra jump in mid-air per level, by pressing §b[SPACE] §r(keybind is separate from Jump)",
   "item.better_tools.crystallite_armor_sapphire_chestplate": "Crystallite Chestplate",
   "item.better_tools.flint_pickaxe": "Flint Pickaxe",
-  "item.better_tools.crystallite_armor_gold_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_sculk": "Crystallite Hoe",
+  "item.better_tools.crystallite_armor_gold_leggings": "Crystallite Leggings",
   "item.better_tools.obsidian_stick": "Obsidian Stick",
   "item.minecraft.tipped_arrow.effect.potion_of_decay_long": "Arrow of Decay",
   "advancements.crystallite_gem_adv.descr": "Craft a Crystallite Gem",
@@ -165,14 +168,15 @@
   "advancements.ice_staff_adv.descr": "Freeze a mob with an Ice Staff",
   "enchantment.better_tools.karma_curse.desc": "Get payback for your attacks",
   "item.better_tools.crystallite_axe_lapis": "Crystallite Axe",
-  "item.minecraft.tipped_arrow.effect.potion_of_decay_2": "Arrow of Decay",
   "item.copper_tools_and_armor.copper_sword": "Copper Sword",
+  "item.minecraft.tipped_arrow.effect.potion_of_decay_2": "Arrow of Decay",
   "item.better_tools.crystallite_axe_sculk": "Crystallite Axe",
   "item.better_tools.crystallite_dagger_netherite": "Crystallite Dagger",
   "biome.better_tools.fungal_caves": "Fungal Caves",
   "item.better_tools.crystallite_axe_gold": "Crystallite Axe",
   "item.better_tools.diamond_blackstone_leggings": "Gilded Blackstone Leggings",
   "item.better_tools.apple_juice": "Apple Juice",
+  "advancements.saved_from_void_adv.descr": "Survive a fall into the void",
   "item.better_tools.crystallite_sword_redstone": "Crystallite Sword",
   "item.better_tools.nether_diamond_sword": "Nether Diamond Sword",
   "item.better_tools.crystallite_charm_base": "Crystallite Charm Base",
@@ -211,14 +215,15 @@
   "item.better_tools.crystallite_armor_prismarine_chestplate": "Crystallite Chestplate",
   "item.better_tools.crystallite_armor_lapis_boots": "Crystallite Boots",
   "block.better_tools.polished_diamond_trapdoor": "Metallic Diamond Trapdoor",
+  "advancements.deal_dmg_through_armor_adv.title": "Mold Breaker",
   "item.better_tools.crystallite_pickaxe_sculk": "Crystallite Pickaxe",
   "item.better_tools.diamond_dagger": "Diamond Dagger",
   "enchantment.better_tools.experience_ench.desc": "Kills drop more XP",
   "block.better_tools.ruby_ore": "Ruby Ore",
   "gui.better_tools.attributes_viewer.label_knockback": "Knockback",
   "item.better_tools.crying_obsidian_helmet": "Crying Obsidian Helmet",
-  "item.better_tools.rick_roll_disc": "Music Disc",
   "item.better_tools.crystallite_sword_amethyst": "Crystallite Sword",
+  "item.better_tools.rick_roll_disc": "Music Disc",
   "jei.better_tools.improved_luck_info": "Four Leaf Clovers can be found in Treehouse chest loot, and they are used to brew Luck Potions.\nFour Leaf Clovers can be bone-mealed to grow more of them.\n\n\n§lImproved Luck Effect§r\nHaving an increased Luck value gives a chance for ores to drop double!\nIt also increases the chance for additional effects of items to activate.\nThe chance increase is +5% per +1 Luck",
   "item.better_tools.crystallite_dagger_redstone": "Crystallite Dagger",
   "block.better_tools.sapphire_ore": "Sapphire Ore",
@@ -228,8 +233,9 @@
   "gui.better_tools.attributes_viewer.label_007": "00",
   "gui.better_tools.attributes_viewer.label_006": "00",
   "gui.better_tools.attributes_viewer.label_005": "00",
-  "item.better_tools.crystallite_armor_honey_boots": "Crystallite Boots",
+  "advancements.high_armor_points_adv.title": "\u0027Tis but a scratch!",
   "gui.better_tools.attributes_viewer.label_004": "00",
+  "item.better_tools.crystallite_armor_honey_boots": "Crystallite Boots",
   "gui.better_tools.attributes_viewer.label_003": "00",
   "gui.better_tools.attributes_viewer.label_002": "00",
   "gui.better_tools.attributes_viewer.label_001": "00",
@@ -239,8 +245,9 @@
   "gui.better_tools.attributes_viewer.label_value": "Value",
   "effect.karma_potion": "Karma",
   "item.better_tools.crystallite_armor_netherite_chestplate": "Crystallite Chestplate",
-  "item.better_tools.crystallite_armor_prismarine_boots": "Crystallite Boots",
+  "advancements.crystallite_upgrades_section.descr": "Advancements for true completionists!",
   "jei.better_tools.topaz_crystallite_info": "§lCrystallite Upgrades: §6Topaz§r\n\nTheme:\nLightning and Loot",
+  "item.better_tools.crystallite_armor_prismarine_boots": "Crystallite Boots",
   "item.better_tools.crystallite_armor_iron_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_honey": "Crystallite Hoe",
   "item.better_tools.sapphire_pickaxe": "Sapphire Pickaxe",
@@ -251,10 +258,10 @@
   "item_group.better_tools.blocks_tab": "BT+A - Building Blocks",
   "item.copper_tools_and_armor.copper_axe": "Copper Axe",
   "item.better_tools.recall_potion": "Recall Potion",
-  "item.better_tools.topaz_shovel": "Topaz Shovel",
   "advancements.sugar_clump_adv.title": "Sugar Rush",
-  "advancements.end_titanium_tools_adv.descr": "Smith a full set of Ender Titanium tools",
+  "item.better_tools.topaz_shovel": "Topaz Shovel",
   "entity.better_tools.projectile_ice_staff_projectile": "Ice Staff",
+  "advancements.end_titanium_tools_adv.descr": "Smith a full set of Ender Titanium tools",
   "advancements.guardian_staff_adv.descr": "Hit a mob with the water pulse from a Guardian Staff",
   "item.better_tools.sapphire_sword": "Sapphire Sword",
   "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
@@ -272,22 +279,22 @@
   "item.better_tools.iron_hearty_chestplate": "Hearty Shirt",
   "item.better_tools.crystallite_dagger_emerald": "Crystallite Dagger",
   "item.better_tools.crystallite_armor_topaz_leggings": "Crystallite Leggings",
-  "item.better_tools.magma_chestplate": "Magma Chestplate",
   "enchantment.copper_tools_and_armor.smelting_touch": "Smelting Touch",
-  "item.better_tools.crystallite_armor_honey_helmet": "Crystallite Helmet",
-  "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "item.better_tools.magma_chestplate": "Magma Chestplate",
   "item.better_tools.heart_charm": "§cHeart Charm",
+  "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "item.better_tools.crystallite_armor_honey_helmet": "Crystallite Helmet",
   "item.copper_tools_and_armor.nether_diamond_pickaxe": "Nether Diamond Pickaxe",
   "advancements.end_titanium_armor_adv.title": "One with the End",
   "item.better_tools.crystallite_shovel_ruby": "Crystallite Shovel",
   "item.better_tools.crystallite_sword_prismarine": "Crystallite Sword",
-  "item.minecraft.tipped_arrow.effect.swift_swim_potion_2": "Arrow of Rapidity",
   "item.minecraft.tipped_arrow.effect.criticality_potion": "Arrow of Criticality",
+  "item.minecraft.tipped_arrow.effect.swift_swim_potion_2": "Arrow of Rapidity",
   "advancements.crystallite_gem_adv.title": "Local Jeweller",
   "gui.better_tools.attributes_viewer.label_movement_speed": "Movement Spd.",
-  "item.better_tools.ruby_leggings": "Ruby Leggings",
-  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
   "item.better_tools.withered_gauntlet": "§8Withered Gauntlet",
+  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
+  "item.better_tools.ruby_leggings": "Ruby Leggings",
   "item.better_tools.earth_circlet": "§dEarth Circlet",
   "advancements.crystallite_tool_upgrade_adv.descr": "Upgrade a Crystallite tool for a useful effect",
   "item.better_tools.crystallite_armor_lapis_leggings": "Crystallite Leggings",
@@ -369,6 +376,7 @@
   "block.better_tools.dark_polished_iron_trapdoor": "Dark Polished Iron Trapdoor",
   "block.better_tools.polished_gold_trapdoor": "Polished Gold Trapdoor",
   "advancements.flint_tools_adv.descr": "Obtain a full set of Flint tools",
+  "advancements.far_block_reach_adv.descr": "Have a Block Reach of at least 8 Blocks",
   "item.minecraft.tipped_arrow.effect.criticality_potion_2": "Arrow of Criticality",
   "item.better_tools.spiked_crystal": "Spiked Crystal",
   "item.better_tools.diamond_crying_obsidian_helmet": "Crying Obsidian Helmet",
@@ -379,6 +387,7 @@
   "item.better_tools.crystallite_shovel_lapis": "Crystallite Shovel",
   "item.better_tools.rick_roll_disc.desc": "Rick Astley - Never Gonna Give You Up",
   "item.better_tools.iron_cactus_chestplate": "Cactus Shirt",
+  "advancements.far_block_reach_adv.title": "ARMS",
   "death.attack.poison_mushroom_damage.item": "%1$s was poisoned by a mushroom whilst fighting %2$s using %3$s",
   "item.better_tools.crystallite_sword_sculk": "Crystallite Sword",
   "item.better_tools.sapphire_axe": "Sapphire Axe",
@@ -392,6 +401,7 @@
   "item.minecraft.tipped_arrow.effect.karma_potion_long": "Arrow of Karma",
   "advancements.experienced_adv.descr": "Enchant a weapon with Experienced",
   "item.better_tools.crystallite_armor_sculk_boots": "Crystallite Boots",
+  "advancements.crystallite_upgrades_section.title": "BT+A - Crystallite Upgrades",
   "item.copper_tools_and_armor.master_builder.desc": "Gareth Coker",
   "block.better_tools.polished_redstone_stairs": "Metallic Redstone Stairs",
   "item.better_tools.music_disc_blank": "Blank Record",
@@ -556,6 +566,7 @@
   "item.copper_tools_and_armor.copper_hoe": "Copper Hoe",
   "item.copper_tools_and_armor.block_dance": "Block Dance",
   "item.better_tools.reflect_charm": "§fReflect Charm",
+  "advancements.saved_from_void_adv.title": "A Close Call",
   "item.better_tools.crystallite_armor_redstone_leggings": "Crystallite Leggings",
   "jei.better_tools.gold_crystallite_info": "§lCrystallite Upgrades: §6Gold§r\n\nTheme:\nReach Distance",
   "gui.better_tools.attributes_viewer.label_attack_damage": "Attack Dmg.",
@@ -598,6 +609,7 @@
   "subtitles.block_dance": "",
   "block.better_tools.light_polished_emerald_slab": "Metallic Emerald Slab",
   "item.better_tools.berry_smoothie": "Sweet Berry Smoothie",
+  "advancements.high_armor_points_adv.descr": "Have an Armor value of at least 30",
   "block.better_tools.polished_redstone_slab": "Metallic Redstone Slab",
   "jei.better_tools.lapis_crystallite_info": "§lCrystallite Upgrades: §9Lapis Lazuli§r\n\nTheme:\nMagic and Enchanting\nAll items in this set have very high enchantability!",
   "item.better_tools.diamond_hard_plate": "§bDiamond Hard Plate",
@@ -733,6 +745,7 @@
   "item.better_tools.cactus_chestplate": "Cactus Shirt",
   "block.better_tools.light_polished_copper_wall": "Polished Copper Wall",
   "advancements.ruby_tools_adv.descr": "Obtain a full set of Ruby tools",
+  "advancements.high_crit_multiplier_adv.title": "Crit Mattered",
   "block.copper_tools_and_armor.copper_ore": "Copper Ore",
   "item.better_tools.crystallite_pickaxe_prismarine": "Crystallite Pickaxe",
   "block.better_tools.light_polished_nether_diamond_block": "Light Metallic Nether Diamond Block",
@@ -741,6 +754,7 @@
   "item.better_tools.crystallite_sword_gold": "Crystallite Sword",
   "item.minecraft.splash_potion.effect.potion_of_decay_2": "Splash Potion of Decay",
   "item.copper_tools_and_armor.copper_pickaxe": "Copper Pickaxe",
+  "advancements.kill_warden_adv.title": "Master of the Deep Dark",
   "death.attack.freeze_shatter_damage": "%1$s was shattered to pieces by %2$s",
   "jei.better_tools.honey_crystallite_info": "§lCrystallite Upgrades: §6Honey§r\n\nTheme:\nCombos and Bees",
   "block.better_tools.light_polished_nether_diamond_slab": "Light Metallic Nether Diamond Slab",
@@ -782,6 +796,7 @@
   "block.better_tools.nether_diamond_block": "Nether Diamond Block",
   "item.minecraft.splash_potion.effect.swift_swim_potion_long": "Splash Potion of Rapidity",
   "item.better_tools.ruby_hoe": "Ruby Hoe",
+  "advancements.max_knockback_resistance_adv.descr": "Have 100% (+10) Knockback Resistance",
   "jei.better_tools.ruby_crystallite_info": "§lCrystallite Upgrades: §cRuby§r\n\nTheme:\nSpeed",
   "advancements.overkill_adv.title": "Overkill",
   "block.better_tools.dark_polished_copper_slab": "Dark Polished Copper Slab",
@@ -801,7 +816,7 @@
   "item.minecraft.potion.effect.double_jump_potion": "Potion of Double Jump",
   "block.better_tools.crystallite_cluster_air": "Crystallite Cluster Air",
   "item.better_tools.crystallite_pickaxe_sky": "Crystallite Pickaxe",
-  "advancements.luck_adv.descr": "Drink a Potion of Luck",
+  "advancements.luck_adv.descr": "Double the drops from an ore using the Luck effect",
   "advancements.sapphire_adv.title": "Frosty Fighting",
   "item.better_tools.crystallite_helmet": "Crystallite Helmet",
   "item.minecraft.lingering_potion.effect.criticality_potion_2": "Lingering Potion of Criticality",
@@ -834,8 +849,10 @@
   "item.better_tools.glide.desc": "C418 - Glide",
   "gui.better_tools.attributes_viewer.label_attribute_viewer": "Player Attributes",
   "item.minecraft.potion.effect.swift_swim_potion": "Potion of Rapidity",
+  "advancements.get_guardian_spike_adv.title": "Spike Collector",
   "item.better_tools.crystallite_shovel_prismarine": "Crystallite Shovel",
   "enchantment.better_tools.karma_curse": "Curse of Karma",
+  "advancements.kill_warden_adv.descr": "Kill a Warden",
   "effect.better_tools.swift_swim": "Swift Swim",
   "item.minecraft.potion.effect.criticality_potion_2": "Potion of Criticality",
   "itemGroup.tabblocks_tab": "BT+A - Building Blocks",
@@ -847,5 +864,6 @@
   "item.better_tools.ruby_shovel": "Ruby Shovel",
   "advancements.diamond_apple_adv.descr": "Eat a Diamond Apple",
   "advancements.shoot_through_walls_adv.title": "Literal Wall Hacks",
-  "item.better_tools.blackstone_leggings": "Gilded Blackstone Leggings"
+  "item.better_tools.blackstone_leggings": "Gilded Blackstone Leggings",
+  "advancements.max_knockback_resistance_adv.title": "Immovable Object"
 }
