--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -1,33 +1,33 @@
 {
   "item.better_tools.ruby": "Ruby",
   "block.better_tools.crystallite_block": "Crystallite Block",
-  "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
-  "item.better_tools.flint_hoe": "Flint Hoe",
   "item.better_tools.curing_charm": "§6Curing Charm",
+  "item.better_tools.flint_hoe": "Flint Hoe",
+  "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
   "advancements.crystallite_tool_upgrade_adv.title": "Crystal Tool Smith",
-  "item.better_tools.poison_charm": "§5Poison Charm",
   "block.better_tools.light_polished_coal_block": "Light Metallic Coal Block",
+  "item.better_tools.poison_charm": "§5Poison Charm",
   "item_group.better_tools.crystallite_tab": "BT+A - Crystallite",
   "block.better_tools.polished_ruby_trapdoor": "Metallic Ruby Trapdoor",
   "item.minecraft.splash_potion.effect.double_jump_potion": "Splash Potion of Double Jump",
   "item.minecraft.tipped_arrow.effect.double_jump_potion_2": "Arrow of Double Jump",
-  "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
   "block.better_tools.light_polished_copper_stairs": "Polished Copper Stairs",
+  "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
   "item.better_tools.fire_crystal": "Flame Crystal",
   "item.copper_tools_and_armor.master_builder": "Master Builder",
   "item.better_tools.crystallite_dagger_amethyst": "Crystallite Dagger",
   "item.better_tools.battle_axe": "Battle Axe",
   "block.better_tools.jewellery_table": "Jewellery Table",
   "item.minecraft.lingering_potion.effect.potion_of_decay": "Lingering Potion of Decay",
-  "item.better_tools.crystallite_shovel": "Crystallite Shovel",
   "item.better_tools.crystallite_dagger_gold": "Crystallite Dagger",
+  "item.better_tools.crystallite_shovel": "Crystallite Shovel",
   "block.better_tools.light_polished_lapis_trapdoor": "Light Metallic Lapis Lazuli Trapdoor",
   "item.better_tools.crystallite_armor_redstone_helmet": "Crystallite Helmet",
   "item.better_tools.end_titanium_axe": "Ender Titanium Axe",
   "item.better_tools.crystallite_axe_honey": "Crystallite Axe",
-  "enchantment.better_tools.life_aura.desc": "Deal more damage the more HP you currently have, but deal less damage at low HP",
-  "item.better_tools.nether_diamond_chestplate": "Nether Diamond Chestplate",
   "block.better_tools.sugar_block": "Sugar Block",
+  "item.better_tools.nether_diamond_chestplate": "Nether Diamond Chestplate",
+  "enchantment.better_tools.life_aura.desc": "Deal more damage the more HP you currently have, but deal less damage at low HP",
   "advancements.flaming_adv.title": "Hot Staff!",
   "item.better_tools.crystallite_armor_iron_chestplate": "Crystallite Chestplate",
   "item.better_tools.gold_dagger": "Golden Dagger",
@@ -36,12 +36,12 @@
   "item.copper_tools_and_armor.copper_shovel": "Copper Shovel",
   "entity.better_tools.projectile_lightning_staff_dispenser_projectile": "Dispenser using Lightning Staff",
   "item.better_tools.crystallite_armor_sapphire_helmet": "Crystallite Helmet",
-  "item.better_tools.crystallite_armor_iron_boots": "Crystallite Boots",
   "advancements.high_crit_multiplier_adv.descr": "Deal at least double your weapon\u0027s regular damage with a critical hit",
-  "item.better_tools.crystallite_sword": "Crystallite Sword",
+  "item.better_tools.crystallite_armor_iron_boots": "Crystallite Boots",
   "item.better_tools.fire_staff": "Fire Staff",
-  "item.better_tools.crystallite_axe_topaz": "Crystallite Axe",
+  "item.better_tools.crystallite_sword": "Crystallite Sword",
   "jei.better_tools.lost_souls_potion_info": "Teleports you to your last death location, if it is in the same dimension.\nIt will fail if you died in lava, or inside a solid block.\nIf you died in the void, you will be placed on a small floating platform.",
+  "item.better_tools.crystallite_axe_topaz": "Crystallite Axe",
   "item.better_tools.guardian_necklace": "§3Guardian Necklace",
   "item.better_tools.crystallite_pickaxe": "Crystallite Pickaxe",
   "block.better_tools.light_polished_iron_block": "Polished Iron Block",
@@ -74,6 +74,7 @@
   "item.better_tools.crystallite_shovel_netherite": "Crystallite Shovel",
   "key.better_tools.float_key": "Float when wearing Ender Titanium Boots",
   "item.better_tools.crystallite_armor_emerald_boots": "Crystallite Boots",
+  "jei.better_tools.jewellery_table_info": "This is the workstation for the Jeweller Villager profession.\nTrade with this villager to get Crystallite Charms, without even needing any Crystallite!",
   "item.better_tools.nether_diamond_hoe": "Nether Diamond Hoe",
   "block.better_tools.light_polished_gold_block": "Light Polished Gold Block",
   "item.better_tools.ascension_potion": "Potion of Ascension",
@@ -138,19 +139,19 @@
   "effect.better_tools.double_jump.description": "Allows for one extra jump in mid-air per level, by pressing §b[SPACE] §r(keybind is separate from Jump)",
   "item.better_tools.crystallite_armor_sapphire_chestplate": "Crystallite Chestplate",
   "item.better_tools.flint_pickaxe": "Flint Pickaxe",
-  "item.better_tools.crystallite_hoe_sculk": "Crystallite Hoe",
   "item.better_tools.crystallite_armor_gold_leggings": "Crystallite Leggings",
+  "item.better_tools.crystallite_hoe_sculk": "Crystallite Hoe",
   "item.better_tools.obsidian_stick": "Obsidian Stick",
   "item.minecraft.tipped_arrow.effect.potion_of_decay_long": "Arrow of Decay",
   "advancements.crystallite_gem_adv.descr": "Craft a Crystallite Gem",
   "item.better_tools.mixed_essence": "Mixed Essence",
   "item.better_tools.glide": "Music Disc",
   "subtitles.crystallite_shimmer": "Mysterious sparkle",
-  "block.better_tools.dark_polished_iron_stairs": "Dark Polished Iron Stairs",
   "advancements.high_max_hp_adv.descr": "Have at least 30 Max HP",
+  "block.better_tools.dark_polished_iron_stairs": "Dark Polished Iron Stairs",
   "item.better_tools.end_titanium_hoe": "Ender Titanium Hoe",
-  "item.better_tools.hive_crystal": "Hive Crystal",
   "advancements.reflect_projectile_adv.descr": "Reflect a projectile at an enemy",
+  "item.better_tools.hive_crystal": "Hive Crystal",
   "block.better_tools.polished_topaz_block": "Metallic Topaz Block",
   "item.better_tools.sky_crystal": "Sky Crystal",
   "item.minecraft.lingering_potion.effect.potion_of_decay_long": "Lingering Potion of Decay",
@@ -219,16 +220,16 @@
   "item.better_tools.crystallite_sword_honey": "Crystallite Sword",
   "item.better_tools.crystallite_armor_prismarine_chestplate": "Crystallite Chestplate",
   "item.better_tools.crystallite_armor_lapis_boots": "Crystallite Boots",
-  "block.better_tools.polished_diamond_trapdoor": "Metallic Diamond Trapdoor",
   "advancements.deal_dmg_through_armor_adv.title": "Mold Breaker",
+  "block.better_tools.polished_diamond_trapdoor": "Metallic Diamond Trapdoor",
   "item.better_tools.crystallite_pickaxe_sculk": "Crystallite Pickaxe",
   "item.better_tools.diamond_dagger": "Diamond Dagger",
   "enchantment.better_tools.experience_ench.desc": "Kills drop more XP",
   "block.better_tools.ruby_ore": "Ruby Ore",
   "gui.better_tools.attributes_viewer.label_knockback": "Knockback",
   "item.better_tools.crying_obsidian_helmet": "Crying Obsidian Helmet",
-  "item.better_tools.crystallite_sword_amethyst": "Crystallite Sword",
   "item.better_tools.rick_roll_disc": "Music Disc",
+  "item.better_tools.crystallite_sword_amethyst": "Crystallite Sword",
   "jei.better_tools.improved_luck_info": "Four Leaf Clovers can be found in Treehouse chest loot, and they are used to brew Luck Potions.\nFour Leaf Clovers can be bone-mealed to grow more of them.\n\n\n§lImproved Luck Effect§r\nHaving an increased Luck value gives a chance for ores to drop double!\nIt also increases the chance for additional effects of items to activate.\nThe chance increase is +5% per +1 Luck",
   "item.better_tools.crystallite_dagger_redstone": "Crystallite Dagger",
   "block.better_tools.sapphire_ore": "Sapphire Ore",
@@ -239,8 +240,8 @@
   "gui.better_tools.attributes_viewer.label_006": "00",
   "gui.better_tools.attributes_viewer.label_005": "00",
   "advancements.high_armor_points_adv.title": "\u0027Tis but a scratch!",
-  "gui.better_tools.attributes_viewer.label_004": "00",
   "item.better_tools.crystallite_armor_honey_boots": "Crystallite Boots",
+  "gui.better_tools.attributes_viewer.label_004": "00",
   "gui.better_tools.attributes_viewer.label_003": "00",
   "gui.better_tools.attributes_viewer.label_002": "00",
   "gui.better_tools.attributes_viewer.label_001": "00",
@@ -251,8 +252,8 @@
   "effect.karma_potion": "Karma",
   "item.better_tools.crystallite_armor_netherite_chestplate": "Crystallite Chestplate",
   "advancements.crystallite_upgrades_section.descr": "Advancements for true completionists!",
-  "jei.better_tools.topaz_crystallite_info": "§lCrystallite Upgrades: §6Topaz§r\n\nTheme:\nLightning and Loot",
   "item.better_tools.crystallite_armor_prismarine_boots": "Crystallite Boots",
+  "jei.better_tools.topaz_crystallite_info": "§lCrystallite Upgrades: §6Topaz§r\n\nTheme:\nLightning and Loot",
   "advancements.combo_jump_adv.title": "Wahoo!",
   "item.better_tools.crystallite_armor_iron_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_honey": "Crystallite Hoe",
@@ -265,14 +266,14 @@
   "item.copper_tools_and_armor.copper_axe": "Copper Axe",
   "item.better_tools.recall_potion": "Recall Potion",
   "advancements.shockwave_adv.descr": "Kill a mob with a shockwave when landing from a fall",
-  "advancements.sugar_clump_adv.title": "Sugar Rush",
   "item.better_tools.topaz_shovel": "Topaz Shovel",
-  "entity.better_tools.projectile_ice_staff_projectile": "Ice Staff",
+  "advancements.sugar_clump_adv.title": "Sugar Rush",
   "advancements.end_titanium_tools_adv.descr": "Smith a full set of Ender Titanium tools",
+  "entity.better_tools.projectile_ice_staff_projectile": "Ice Staff",
   "advancements.guardian_staff_adv.descr": "Hit a mob with the water pulse from a Guardian Staff",
   "item.better_tools.sapphire_sword": "Sapphire Sword",
-  "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
   "item.better_tools.crystallite_shovel_honey": "Crystallite Shovel",
+  "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
   "item.better_tools.nether_diamond_dagger": "Nether Diamond Dagger",
   "item.better_tools.tough_crystal": "Tough Crystal",
   "item.better_tools.echo_crystal": "Echo Crystal",
@@ -286,22 +287,22 @@
   "item.better_tools.iron_hearty_chestplate": "Hearty Shirt",
   "item.better_tools.crystallite_dagger_emerald": "Crystallite Dagger",
   "item.better_tools.crystallite_armor_topaz_leggings": "Crystallite Leggings",
-  "enchantment.copper_tools_and_armor.smelting_touch": "Smelting Touch",
   "item.better_tools.magma_chestplate": "Magma Chestplate",
-  "item.better_tools.heart_charm": "§cHeart Charm",
-  "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "enchantment.copper_tools_and_armor.smelting_touch": "Smelting Touch",
   "item.better_tools.crystallite_armor_honey_helmet": "Crystallite Helmet",
+  "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "item.better_tools.heart_charm": "§cHeart Charm",
   "item.copper_tools_and_armor.nether_diamond_pickaxe": "Nether Diamond Pickaxe",
   "advancements.end_titanium_armor_adv.title": "One with the End",
   "item.better_tools.crystallite_shovel_ruby": "Crystallite Shovel",
   "item.better_tools.crystallite_sword_prismarine": "Crystallite Sword",
-  "item.minecraft.tipped_arrow.effect.criticality_potion": "Arrow of Criticality",
   "item.minecraft.tipped_arrow.effect.swift_swim_potion_2": "Arrow of Rapidity",
+  "item.minecraft.tipped_arrow.effect.criticality_potion": "Arrow of Criticality",
   "advancements.crystallite_gem_adv.title": "Local Jeweller",
   "gui.better_tools.attributes_viewer.label_movement_speed": "Movement Spd.",
-  "item.better_tools.withered_gauntlet": "§8Withered Gauntlet",
-  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
   "item.better_tools.ruby_leggings": "Ruby Leggings",
+  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
+  "item.better_tools.withered_gauntlet": "§8Withered Gauntlet",
   "item.better_tools.earth_circlet": "§dEarth Circlet",
   "advancements.crystallite_tool_upgrade_adv.descr": "Upgrade a Crystallite tool for a useful effect",
   "item.better_tools.crystallite_armor_lapis_leggings": "Crystallite Leggings",
@@ -814,6 +815,7 @@
   "item.minecraft.splash_potion.effect.swift_swim_potion_long": "Splash Potion of Rapidity",
   "item.better_tools.ruby_hoe": "Ruby Hoe",
   "advancements.max_knockback_resistance_adv.descr": "Have 100% (+10) Knockback Resistance",
+  "advancements.fizzy_drinks_adv.title": "Feel the Fizz",
   "jei.better_tools.ruby_crystallite_info": "§lCrystallite Upgrades: §cRuby§r\n\nTheme:\nSpeed",
   "advancements.overkill_adv.title": "Overkill",
   "block.better_tools.dark_polished_copper_slab": "Dark Polished Copper Slab",
@@ -869,6 +871,7 @@
   "gui.better_tools.attributes_viewer.label_attribute_viewer": "Player Attributes",
   "item.minecraft.potion.effect.swift_swim_potion": "Potion of Rapidity",
   "advancements.get_guardian_spike_adv.title": "Spike Collector",
+  "advancements.fizzy_drinks_adv.descr": "Survive on only carbonated drinks for a whole day",
   "item.better_tools.crystallite_shovel_prismarine": "Crystallite Shovel",
   "enchantment.better_tools.karma_curse": "Curse of Karma",
   "advancements.low_gravity_adv.descr": "Have low gravity and wear appropriate boots",
